// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion module init() when all sections are closed initialises accordion HTML correctly 1`] = `
"
<div data-module=\\"accordion\\" class=\\"with-js\\"><div class=\\"govuk-accordion__controls\\"><button class=\\"govuk-accordion__expand-all\\" aria-expanded=\\"false\\" type=\\"button\\">Open all</button></div>
  <div class=\\"govuk-accordion__section\\" aria-expanded=\\"false\\">
    <div class=\\"govuk-accordion__section-header\\" tabindex=\\"0\\" role=\\"button\\">Header 1<span class=\\"govuk-accordion--icon\\"></span></div>
    <div class=\\"govuk-accordion__section-body\\">Body 1</div>
  </div>
  <div class=\\"govuk-accordion__section\\" aria-expanded=\\"false\\">
    <div class=\\"govuk-accordion__section-header\\" tabindex=\\"0\\" role=\\"button\\">Header 2<span class=\\"govuk-accordion--icon\\"></span></div>
    <div class=\\"govuk-accordion__section-body\\">Body 2</div>
  </div>
</div>
"
`;

exports[`Accordion module init() when one section is open initialises accordion HTML correctly 1`] = `
"
<div data-module=\\"accordion\\" class=\\"with-js\\"><div class=\\"govuk-accordion__controls\\"><button class=\\"govuk-accordion__expand-all\\" aria-expanded=\\"false\\" type=\\"button\\">Open all</button></div>
  <div class=\\"govuk-accordion__section govuk-accordion__section--expanded\\" aria-expanded=\\"true\\">
    <div class=\\"govuk-accordion__section-header\\" tabindex=\\"0\\" role=\\"button\\">Header 1<span class=\\"govuk-accordion--icon\\"></span></div>
    <div class=\\"govuk-accordion__section-body\\">Body 1</div>
  </div>
  <div class=\\"govuk-accordion__section\\" aria-expanded=\\"false\\">
    <div class=\\"govuk-accordion__section-header\\" tabindex=\\"0\\" role=\\"button\\">Header 2<span class=\\"govuk-accordion--icon\\"></span></div>
    <div class=\\"govuk-accordion__section-body\\">Body 2</div>
  </div>
</div>
"
`;
